<resources>
    <string name="app_name">Step Counter</string>
    <string name="steps">Steps counter</string>
    <string name="step_detector">detector</string>
    <string name="rounds">Rounds</string>
    <string name="current_round">Current round</string>
    <string name="step_counter_column">Step Counter</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <!--<string name="step_counter_result">%s,%d,%d,%d,%d</string>-->
    <string name="step_counter_result">pocket %s,round %d, total rounds %d, desired steps %d</string>
    <string name="settings_steps">Steps</string>
    <string name="settings_please_enter_number_of_steps">Please enter number of steps</string>
    <string name="round_time">Round time</string>
    <string name="settings">Settings</string>
    <string name="enter_rounds">Enter Rounds</string>
    <string name="round_time_hint">Enter round time in sec</string>
    <string name="settings_save">Save</string>
    <array name="pockets_list">
        <item>Back Pants Pocket</item>
        <item>Front Pants Pocket</item>
        <item>Front Shirt Pocket</item>
        <item>Looking at phone</item>
    </array>
    <string name="nothing">Nothing to upload</string>
    <string name="init_round_value">0</string>
    <string name="error_msg_timeout">Server could not be reached.\nPlease check connection and try again</string>
    <string name="unmonitored_title">Add app to unmonitored</string>
    <string name="unmonitored_msg">You are using Samsung device. To improve app stability we recommend you to add app to unmonitored list</string>
    <string name="samsung_labeel">Add to unmonitored list</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="recognition_format">%s - %d %%;</string>
    <string name="dialog_step_result_title">Step result</string>
    <string name="dialog_step_result_hide">Hide</string>
    <string name="menu_detector">Detector</string>
</resources>
